[gd_scene load_steps=2 format=3 uid="uid://dmkb0v5o67omj"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_c2re2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c2re2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 81.0
offset_top = 56.0
offset_right = 275.0
offset_bottom = 96.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Host" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="Join" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "JOIN
"

[node name="Init" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "INIT"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "name:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[connection signal="button_down" from="VBoxContainer/HBoxContainer/Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Init" to="." method="_on_init_button_down"]
